[project]
name = "travel-agent-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "requests>=2.34.2",
    "scrapling>=0.4.8",
    "streamlit>=1.57.0",
    "streamlit-lottie>=0.0.5",
    "uvicorn>=0.47.0",
]
